# mcp-file-ops

./: .gitignore  ENFORCEMENT.md  LICENSE  README.md
docs/: ARCHITECTURE.md  COMPARISON.md  DEPLOYMENT.md  ENFORCEMENT.md
python/: README.md  server.py
rust/: ARCHITECTURE.md  BUILD.md  CHECKLIST.md  Cargo.toml
rust/.cargo/: config.toml
rust/src/: errors.rs  main.rs
rust/src/rpc/: router.rs
rust/src/services/: mod.rs
rust/src/src/: lib.rs
rust/src/src/rpc/: mod.rs  schema.rs
rust/src/src/services/: logging.rs  metrics.rs  rate_limit.rs
rust/src/src/tools/: file_edit.rs  file_insert.rs
rust/src/src/transport/: message.rs  stdio.rs
rust/src/src/utils/: diff.rs  file_io.rs
rust/src/tools/: file_create.rs  file_read.rs  file_search.rs  file_structure.rs  mod.rs
rust/src/transport/: mod.rs
rust/src/utils/: hashing.rs  mod.rs
