[package]
name = "file_ops_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["alloc"] }
anyhow = "1"
async-trait = "0.1"
regex = "1"
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

